# cloudpiovt-plugin

./: .gitignore  AGENTS.md  README.md  background.js  cloudpiovt-plugin.sln  manifest.json  options-layout.css  options.css  options.html  options.js  package-lock.json  package.json  popup.css  popup.html  popup.js  update.json  vitest.config.js  开发助手插件使用手册.md
.codebuddy/memory/: 2026-05-29.md  2026-06-02.md  2026-06-05.md  2026-06-10.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  MEMORY.md
.native-host/: com.cloudpiovt.editor_helper.json
assets/icons/: README.md
cloudpiovt-plugin/: README.md  manifest.json  options-layout.css  options.css  options.html  options.js  popup.css  popup.html  popup.js  开发助手插件使用手册.md
cloudpiovt-plugin/.native-host/: com.cloudpiovt.editor_helper.json
cloudpiovt-plugin/docs/: architecture.md  changelog-ai.md
docs/: architecture.md  changelog-ai.md
lib/: config.js  control-metadata.js  custom-launchers.js  h3yun-code.js  native-host.js  preflight-diagnostics.js  readme-parser.js  recent-target-directories.js  release-notes.js  target-directory-access.js  target-directory-state.js  update-check.js  utils.js  workspace-documents.js
native-host-rust/: Cargo.toml
native-host-rust/src/: lib.rs  main.rs
native-host-rust/tests/: integration_test.rs
scripts/: build-native-host-release.ps1  install-native-host.cmd  install-native-host.ps1  package-extension-release.ps1  verify-custom-launchers.mjs  verify-preflight-diagnostics.mjs
tests/: h3yun-code.test.js  h3yun-dom-snapshot.test.js  preflight-diagnostics.test.js
(+55 files in other folders)
