[package]
name = "cloudpiovt_native_host"
version = "1.2.0"
edition = "2021"

[lib]
name = "cloudpiovt_native_host"
path = "src/lib.rs"

[[bin]]
name = "cloudpiovt_native_host"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.7"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
